added the correct word in the heading

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <div class="container">
   <div class="quote-box">
-    <h2>Quote of the Date</h2>
+    <h2>Quote of the Day</h2>
     <blockquote id="quote">Loading...</blockquote>
     <span id="author">Loading...</span>
     <div>
